# LLM-as-a-Judeg

./: .gitignore  CONTEXT.md  DASHBOARD_PROMPT.md  DEPLOYMENT_PLAN.md  SPEC.md
docs/adr/: 0001-per-root-storage-providers.md  0002-co-location-convention.md
llm-judge/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
llm-judge/dashboard/: app.py  data.py
llm-judge/dashboard/views/: run_detail.py  runs_list.py  trigger.py  upload_case.py  verdicts_explorer.py
llm-judge/deploy/: cloud-scheduler.md
llm-judge/src/llm_judge/: __init__.py  __main__.py  alerts.py  cli.py  config.py  evaluator.py  golden_examples.py  llm_client.py  log_parser.py  logging_setup.py  models.py  runner.py
llm-judge/src/llm_judge/rubrics/: __init__.py  registry.py
llm-judge/src/llm_judge/rubrics/golden/: README.md
llm-judge/src/llm_judge/rubrics/prompts/: classifier.md  document_summaries.md  duplicate_check.md  extraction_list.md  final_summary.md  full_summary.md  grouping_boundary.md  medical_document_validator.md  personal_committee.md  personal_details.md  same_document.md
llm-judge/src/llm_judge/storage/: __init__.py  azure.py  base.py  client.py  factory.py  gcs.py  local.py  s3.py
llm-judge/tests/: conftest.py  test_alerts.py  test_config.py  test_evaluator.py  test_golden_examples.py  test_log_parser.py  test_rubric_registry.py  test_runner.py
llm-judge/tests/fixtures/: boundary_check_log.json  duplicate_check_log.json  golden_example.json  standard_log.json  tool_use_log.json
teach/: MEMORY.md  MISSION.md  NOTES.md  RESOURCES.md
(+3 files in other folders)
